Quick fix arrows alignement

--- a/assembl/static2/css/views/debate.scss
+++ b/assembl/static2/css/views/debate.scss
@@ -304,7 +304,7 @@
         line-height: 30px;
         height: 36px;
         margin: 15px 0 0 30px;
-        padding: 2px 0 0 5px;
+        padding: 3px 0 0 5px;
         text-align: left;
         width: 36px;
 
